@@ -52,7 +52,7 @@
  *
  *  \code
  *      // Initialize the Master SPI mode USART driver before first use, with 1Mbit baud
- *      SerialSPI_Init(&USARTD0, (USART_SPI_SCK_LEAD_RISING | SPI_SAMPLE_LEADING | SPI_ORDER_MSB_FIRST), 1000000);
+ *      SerialSPI_Init(&USARTD0, (USART_SPI_SCK_LEAD_RISING | USART_SPI_SAMPLE_LEADING | USART_SPI_ORDER_MSB_FIRST), 1000000);
  *
  *      // Send several bytes, ignoring the returned data
  *      SerialSPI_SendByte(&USARTD0, 0x01);
@@ -177,9 +177,7 @@
 			static inline void SerialSPI_SendByte(USART_t* const USART,
 			                                      const uint8_t DataByte)
 			{
-				USART->DATA   = DataByte;
-				while (!(USART->STATUS & USART_TXCIF_bm));
-				USART->STATUS = USART_TXCIF_bm;
+				SerialSPI_TransferByte(DataByte);
 			}
 
 			/** Sends a dummy byte through the USART SPI interface, blocking until the transfer is complete. The response
@@ -191,10 +189,7 @@
 			 */
 			static inline uint8_t SerialSPI_ReceiveByte(USART_t* const USART)
 			{
-				USART->DATA   = 0;
-				while (!(USART->STATUS & USART_TXCIF_bm));
-				USART->STATUS = USART_TXCIF_bm;
-				return USART->DATA;
+				return SerialSPI_TransferByte(0);
 			}
 			
 	/* Disable C linkage for C++ Compilers: */
